# dpi_library

src/: BenchmarkMain.cc  CMakeLists.txt  Main.cc
src/benchmark/: Benchmarks.h  CMakeLists.txt  DPIAppendBenchmark.h  DPIFlowInjectConsumeBenchmark.cc  DPIFlowInjectConsumeBenchmark.h  DPILatencyBenchmark.cc  DPILatencyBenchmark.h
src/conf/: DPI.conf
src/dpi/flow/: CMakeLists.txt  FlowHandle.h  FlowRegistryClient.cc  FlowRegistryClient.h  FlowRegistryServer.cc  FlowRegistryServer.h  FlowSource.h  FlowTarget.h
src/dpi/memory/: BufferHandle.h  BufferReader.h  BufferSegment.h  BufferWriter.h  CMakeLists.txt  NodeClient.h  NodeServer.h  RegistryClient.h  RegistryServer.h
src/memory-api/: CMakeLists.txt  context.h
src/net/message/: DPICreateFlowRequest.proto  DPICreateFlowResponse.proto  MessageErrors.h  MessageTypes.h
src/test/: CMakeLists.txt  Tests.h
src/test/dpi/: CMakeLists.txt  IntegrationTestsAppend.h  TestBufferIterator.h  TestBufferWriter.h  TestRegistryClient.h
src/test/dpi/flow/: CMakeLists.txt  TestFlowSource.cc  TestFlowSource.h
src/test/examples/: CMakeLists.txt  append_examples.h
src/utils/: Config.cc  Config.h  Logging.h
